--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # bower
-bower_components
+bower_components/
 
 # Logs
 logs
@@ -25,7 +25,7 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-node_modules
+node_modules/
 
 # Users Environment Variables
 .lock-wscript
